# polkadot-linter

./: .gitignore  Cargo.toml  README.md  polkadot-linter.toml
.github/workflows/: ci.yml
config/: default.toml
src/: config.rs  diagnostics.rs  engine.rs  lib.rs  main.rs
src/rules/: benchmarking.rs  mock_usage.rs  mod.rs  semantic.rs  terminology.rs  test_smells.rs
tests/: rules_test.rs
tests/fixtures/: bad_ben002.rs  bad_ben003.rs  bad_mok001.rs  bad_sec001.rs  bad_sec002.rs  bad_sec003.rs  bad_sec004.rs  bad_sec005.rs  bad_sec006.rs  bad_sec007.rs  bad_sec008.rs  bad_sec009.rs  bad_sec010.rs  bad_sec011.rs  bad_sec012.rs  bad_sec013.rs  bad_sec014.rs  bad_sec015.rs  bad_sec016.rs  bad_sec017.rs  bad_sem002.rs  bad_sem003.rs  bad_sem004.rs  bad_sem005.rs  bad_sem006.rs  bad_sem007.rs  bad_sem008.rs  bad_sem009.rs  bad_sem010.rs  bad_sem011.rs  bad_sem012.rs  bad_sem013.rs  bad_sem014.rs  bad_sem015.rs  bad_sem016.rs  bad_trm001.rs  bad_tst001.rs  bad_tst002.rs  bad_tst003.rs  bad_tst004.rs  (+50 more)
tests/fixtures/ben001_bad/: benchmarking.rs
tests/fixtures/ben001_good/: benchmarking.rs  weights.rs
